--- a/screen_grab/package.xml
+++ b/screen_grab/package.xml
@@ -43,6 +43,7 @@
   <build_depend>cv_bridge</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>image_transport</build_depend>
+  <build_depend>libx11-dev</build_depend>
   <build_depend>nodelet</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>roslint</build_depend>
